--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="countener">
             <div class="row text-center mb-3">
               <div class="col">
-                <h2>My Aktivities</h2>
+                <h2>My Aktivity</h2>
               </div>
             </div>
             <div class="row">
@@ -157,7 +157,7 @@
                     <label for="pesan" class="form-label">Pesan</label>
                     <textarea class="form-control" id="pesan" rows="3"></textarea>
                   </div>
-                  <button type="submit" class="btn btn-primary">Kirim</button>
+                  <button type="submit" class="btn btn-succes">Kirim</button>
                 </form>
               </div>
             </div>
